@@ -8,6 +8,8 @@ Changes log
       - Allow parsing of double values like "2.0" or "4.0" being received in
         the Retry-After header. Issue #1355.
         Reported by Brett Cooper.
+      - MemoryRealm.unmap method leads to ArrayOutOfBound exception. Issue #1358.
+        Reported by j-perrin.
     - Misc
       - Removed deprecated extensions emf, javamail, jaxrs, jibx, lucene, nio, 
         oauth, openid, platform, raml, simple, wadl. Issue #1351.
